--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=League+Gothic&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Saira:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
     padding: 0;
     margin: 0;
+    font-family: "IM Fell English SC", serif;
 }
 
 .menu {
@@ -10,4 +12,41 @@
     align-items: flex-end;
     box-sizing: border-box;
     justify-content: space-between;
+    width: 1280px;
+}
+
+.menu a{
+    text-decoration: none;
+    color: #000;
+    font-size: 25px;
+
+    
+}
+
+.btn__header {
+    background: #FF0000;
+    border-radius: 50px;
+    width: 157px;
+    height: 52px;
+    color: #fff;
+    text-decoration: none;
+}
+
+h1 {
+    font-size: 100px;
+    font-weight: 400;
+}
+
+p 
+
+
+.div__right {
+    background-image: url(./assets/imagens/backgroun.png);
+}
+
+.img__luffy {
+
+    width: 270px;
+    height: 476px;
+
 }
